pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-313-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/313-lists.md
---
 1. a

 2. b

[32m────────────────────[0m
[33m3. c
[0m[32m────────────────────[0m
